Micro content information page added.

--- a/micro_content_manager/templates/micro_content_manager/index.html
+++ b/micro_content_manager/templates/micro_content_manager/index.html
@@ -13,8 +13,8 @@
         {% for id, title in contents %}
             <tr>
                 <td>
-                    <li><span style="display:inline-block; width: 80px;"><a href="json?content={{ id }}">{{ title }}</a></span></li>
-
+                <!--    <li><span style="display:inline-block; width: 80px;"><a href="json?content={{ id }}">{{ title }}</a></span></li> -->
+                <li><span style="display:inline-block; width: 80px;"><a href="{% url 'micro_content_manager:micro_content_data' id%}">{{ title }}</a></span></li>
                 </td>
                 <td><a class="button" href="edit?content={{ id }}">Edit</a></td>
                 <td><a class="button" href="download?content={{ id }}">Download</a></td>
