--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -1,19 +1,26 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Home{% endblock %}
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'user_page.css' %}">
+</head>
 
 {% block content %}
 {% if user.is_authenticated %}
     Hi {{ user.username }}!
     <p><a href="{% url 'logout' %}">logout</a></p>
     <p><a href="{% url 'password_reset' %}">reset password</a></p>
-      <p><a href="{% url 'users_manager:user_data' %}">User data</a>
-      <p><a href="{% url 'users_manager:password_change' %}">Password change</a></p>
-      <p><a href="{% url 'micro_content_manager:micro_content_creation' %}">Micro-content Creation</a></p>
+    <p><a href="{% url 'users_manager:user_data' %}">User data</a>
+    <p><a href="{% url 'users_manager:password_change' %}">Password change</a></p>
+    <p><a href="{% url 'micro_content_manager:micro_content_creation' %}">Micro-content Creation</a></p>
     <p><a href="{% url 'micro_content_manager:index' %}">Micro-content Index</a></p>
+    <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Search</a></p>
+
+
+
 
 {% else %}
-
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
 
