--- a/micro_content_manager/templates/micro_content_manager/edit.html
+++ b/micro_content_manager/templates/micro_content_manager/edit.html
@@ -11,6 +11,8 @@
 <h1>Micro-learning contents generator</h1>
 
 <p><a class="button" href="{% url 'user_page' %}">Go home</a></p>
+<p><a class="button" href="{% url 'micro_content_manager:edit' id %}">Back</a></p>
+
 
 <form action="update" method="post">
 
