--- a/micro_content_manager/templates/micro_content_manager/micro_content_info.html
+++ b/micro_content_manager/templates/micro_content_manager/micro_content_info.html
@@ -43,6 +43,6 @@
             {% endfor %}
         </li>
     </ul>
-<a href="{% url 'user_page' %}">Back to my user profile</a>
+<a href="{% url 'micro_content_manager:index' %}">Back</a>
 </body>
 </html>
