--- a/users_manager/templates/users_manager/user_link_confirmation.html
+++ b/users_manager/templates/users_manager/user_link_confirmation.html
@@ -4,5 +4,5 @@ Your account in the MicroLearning Platform is already activated:
         Username: {{ user.username }}
         First name: {{ user.first_name }}
 
-<p> You can now login in: http://{{ domain }}{% url 'users_manager:logIn'%} </p>
+You can now login in: http://{{ domain }}{% url 'users_manager:logIn'%}
 {% endautoescape %}
