--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -16,9 +16,7 @@
     <p><a href="{% url 'micro_content_manager:micro_content_creation' %}">Micro-content Creation</a></p>
     <p><a href="{% url 'micro_content_manager:index' %}">Micro-content Index</a></p>
     <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Search</a></p>
-
-
-
+    <p><a href="{% url 'micro_content_manager:create_selection' %}">Create Selection</a></p>
 
 {% else %}
   <p>You are not logged in</p>
