--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -5,22 +5,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'user_page.css' %}">
 </head>
+<body>
+    {% block content %}
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <p><a href="{% url 'logout' %}">logout</a></p>
+        <p><a href="{% url 'password_reset' %}">reset password</a></p>
+        <p><a href="{% url 'users_manager:user_data' %}">User data</a>
+        <p><a href="{% url 'users_manager:password_change' %}">Password change</a></p>
+        <p><a href="{% url 'micro_content_manager:micro_content_creation' %}">Micro-content Creation</a></p>
+        <p><a href="{% url 'micro_content_manager:index' %}">Micro-content Index</a></p>
+        <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Search</a></p>
+        <p><a href="{% url 'micro_content_manager:create_selection' %}">Create Selection</a></p>
 
-{% block content %}
-{% if user.is_authenticated %}
-    Hi {{ user.username }}!
-    <p><a href="{% url 'logout' %}">logout</a></p>
-    <p><a href="{% url 'password_reset' %}">reset password</a></p>
-    <p><a href="{% url 'users_manager:user_data' %}">User data</a>
-    <p><a href="{% url 'users_manager:password_change' %}">Password change</a></p>
-    <p><a href="{% url 'micro_content_manager:micro_content_creation' %}">Micro-content Creation</a></p>
-    <p><a href="{% url 'micro_content_manager:index' %}">Micro-content Index</a></p>
-    <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Search</a></p>
-    <p><a href="{% url 'micro_content_manager:create_selection' %}">Create Selection</a></p>
+    {% else %}
+      <p>You are not logged in</p>
+      <a href="{% url 'login' %}">login</a>
 
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">login</a>
+    {% endif %}
+        <footer>
+        <p>Copyright 2019, MicroLearningPlatform</p>
+        </footer>
 
-{% endif %}
-{% endblock %}
+    {% endblock %}
+
+
+</body>
