--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -13,7 +13,7 @@
         <p><a href="{% url 'password_reset' %}">reset password</a></p>
         <p><a href="{% url 'users_manager:user_data' %}">User data</a>
         <p><a href="{% url 'users_manager:password_change' %}">Password change</a></p>
-        <p><a href="{% url 'micro_content_manager:micro_content_creation' %}">Micro-content Creation</a></p>
+        <p><a href="{% url 'micro_content_manager:micro_content_creation' 1 3 %}">Micro-content Creation</a></p>
         <p><a href="{% url 'micro_content_manager:index' %}">Micro-content Index</a></p>
         <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Search</a></p>
         <p><a href="{% url 'micro_content_manager:create_selection' %}">Create Selection</a></p>
