--- a/micro_content_manager/templates/micro_content_manager/index.html
+++ b/micro_content_manager/templates/micro_content_manager/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Micro-learning contents generator</h1>
-<a href="{% url 'micro_content_manager:micro_content_creation' %}">MC creation</a>
+<a href="{% url 'micro_content_manager:micro_content_creation' 1 3 %}">MC creation</a>
 <ul>
     <table>
         {% for id, title in contents %}
